--- a/example/package.json
+++ b/example/package.json
@@ -8,7 +8,8 @@
     "build": "parcel build index.html"
   },
   "dependencies": {
-    "react-app-polyfill": "^3.0.0"
+    "react-app-polyfill": "^3.0.0",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "alias": {
     "react": "../node_modules/react",
@@ -16,9 +17,15 @@
     "scheduler/tracing": "../node_modules/scheduler/tracing-profiling"
   },
   "devDependencies": {
-    "@types/react": "^18.0.12",
-    "@types/react-dom": "^18.0.5",
+    "@types/react": "../node_modules/@types/react",
+    "@types/react-dom": "../node_modules/@types/react-dom",
+    "eslint-plugin-react-hooks": "../node_modules/eslint-plugin-react-hooks",
     "parcel": "1.12.3",
-    "typescript": "^3.4.5"
+    "typescript": "../node_modules/typescript"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:react-hooks/recommended"
+    ]
   }
 }
