--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@testing-library/react-hooks": "^8.0.0",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -66,5 +67,10 @@
     "tsdx": "^0.14.1",
     "tslib": "^2.4.0",
     "typescript": "^4.7.3"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:react-hooks/recommended"
+    ]
   }
 }
