--- a/.github/workflows/gh.yml
+++ b/.github/workflows/gh.yml
@@ -10,8 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
-      - name: Build useTools
+        uses: actions/checkout@v3
+      - name: Build useTools after tests
         run: |
           yarn install --frozen-lockfile
           yarn test
