--- a/example/package.json
+++ b/example/package.json
@@ -8,6 +8,7 @@
     "build": "parcel build index.html --public-url ./"
   },
   "dependencies": {
+    "classnames": "^2.3.1",
     "react-app-polyfill": "^3.0.0",
     "react-syntax-highlighter": "^15.5.0"
   },
@@ -19,13 +20,7 @@
   "devDependencies": {
     "@types/react": "../node_modules/@types/react",
     "@types/react-dom": "../node_modules/@types/react-dom",
-    "eslint-plugin-react-hooks": "../node_modules/eslint-plugin-react-hooks",
     "parcel": "1.12.3",
     "typescript": "../node_modules/typescript"
-  },
-  "eslintConfig": {
-    "extends": [
-      "plugin:react-hooks/recommended"
-    ]
   }
 }
