--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^14.2.1",
-    "@types/lodash": "^4.14.182",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
@@ -90,6 +90,6 @@
     ]
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash.debounce": "^4.0.8"
   }
 }
