--- a/.github/workflows/publish-beta.yml
+++ b/.github/workflows/publish-beta.yml
@@ -1,6 +1,5 @@
 name: Beta Publish
 
-# Then a new PR is merged to master branch, a beta version will be published
 on:
   pull_request:
     branches: 
@@ -8,6 +7,7 @@ on:
     types: [closed]
 
 jobs:
+  # When a new PR is merged to master branch, a beta version will be published
   publish-beta:
     if: ${{ github.event.pull_request.merged }}
     runs-on: ubuntu-latest
