--- a/.github/workflows/publish-stable.yml
+++ b/.github/workflows/publish-stable.yml
@@ -1,12 +1,12 @@
 name: Stable Publish
 
-# Then a new release is created, a stable version will be published.
 on:
   release:
     types:
       - created
 
 jobs:
+  # When a new release is created, a stable version will be published.
   publish-stable:
     runs-on: ubuntu-latest
     steps:
@@ -28,6 +28,31 @@ jobs:
           tag: latest
           token: ${{ secrets.NPM_TOKEN }}
       - name: Update stable version to master branch
-        run: git push
+        run: git push origin HEAD:master # add origin and HEAD because current running environment is from a release
         env:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+
+  # When a new PR is merged to master branch, a demo site will be build and deployed 
+  deploy-demo-page:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Build useTools after tests
+        run: |
+          yarn install --frozen-lockfile
+          yarn test
+          yarn build
+      - name: Build example
+        run: |
+          cd example
+          yarn install --frozen-lockfile
+          yarn build
+      - name: Deploy to GitHub Pages
+        if: success()
+        uses: crazy-max/ghaction-github-pages@v2
+        with:
+          target_branch: demo
+          build_dir: example/dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
