--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "type": "git",
     "url": "https://github.com/vincecao/use-tools"
   },
-  "version": "1.3.1-beta.0",
+  "version": "1.3.2-alpha",
   "license": "MIT",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
