--- a/.github/workflows/publish-beta.yml
+++ b/.github/workflows/publish-beta.yml
@@ -30,6 +30,14 @@ jobs:
           tag: beta
           token: ${{ secrets.NPM_TOKEN }}
       - name: Update beta version to master branch
-        run: git push
+        run: |
+          PACKAGE_VERSION=$(cat package.json \
+            | grep \"version\" \
+            | head -1 \
+            | awk -F: '{ print $2 }' \
+            | sed 's/[",]//g' \
+            | tr -d '[[:space:]]')
+          git commit -a -m $PACKAGE_VERSION
+          git push
         env:
           github-token: ${{ secrets.GITHUB_TOKEN }}
