update: ci pulish to GITHUB and NPMJS

--- a/.github/workflows/publish-beta.yml
+++ b/.github/workflows/publish-beta.yml
@@ -13,31 +13,38 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
+
+      - name: Configure Git setting for CI
+        run: |
+          git config --global user.name "Lineng CAO"
+          git config --global user.email "lineng.ca@gmail.com"
+      
+      - name: Publish beta package to NPMJS npm registry
+        uses: actions/setup-node@v3
         with:
           node-version: 16
+          registry-url: 'https://registry.npmjs.org'
       - name: Test package
         run: |
           yarn install --frozen-lockfile
           yarn test
       - name: Assign beta version from release tag version
-        run: |
-          git config --global user.name "Lineng CAO"
-          git config --global user.email "lineng.ca@gmail.com"
-          npm version prerelease --preid=beta --no-git-tag-version 
-      - uses: JS-DevTools/npm-publish@v1
+        run: npm version prerelease --preid=beta
+      - run: npm publish --tag beta
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      
+      - name: Publish beta package to GITHUB npm registry
+        uses: actions/setup-node@v3
         with:
-          tag: beta
-          token: ${{ secrets.NPM_TOKEN }}
-      - name: Update beta version to master branch
-        run: |
-          PACKAGE_VERSION=$(cat package.json \
-            | grep \"version\" \
-            | head -1 \
-            | awk -F: '{ print $2 }' \
-            | sed 's/[",]//g' \
-            | tr -d '[[:space:]]')
-          git commit -a -m $PACKAGE_VERSION
-          git push
+          node-version: 16
+          registry-url: https://npm.pkg.github.com/
+          scope: 'vincecao'
+      - run: npm publish --tag beta
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
+      - name: Update beta version to HEAD:master branch
+        run: git push origin HEAD:master
         env:
           github-token: ${{ secrets.GITHUB_TOKEN }}
