--- a/.github/workflows/publish-beta.yml
+++ b/.github/workflows/publish-beta.yml
@@ -28,8 +28,8 @@ jobs:
         run: |
           yarn install --frozen-lockfile
           yarn test
-      - name: Assign beta version from release tag version
-        run: npm version prerelease --preid=beta
+      - name: Assign a new beta version from current package version
+        run: npm version prerelease --preid=beta -m "ci-chore %s"
       - name: Publish beta to NPMJS
         run: npm publish --tag beta
         env:
@@ -46,8 +46,8 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
-      - name: Update beta version to HEAD:master branch
-        run: git push origin HEAD:master
-        env:
+      - name: Push beta version change to HEAD:master
+        uses: ad-m/github-push-action@master
+        with:
           # for re-triggering github checks on master, need to use a personal PAT token instead of GITHUB_TOKEN
-          github-token: ${{ secrets.GH_PUSH_COMMIT_TOKEN }}
+          github_token: ${{ secrets.GH_PUSH_COMMIT_TOKEN }}
