--- a/.github/workflows/publish-stable.yml
+++ b/.github/workflows/publish-stable.yml
@@ -11,7 +11,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
+        with:
+          # Allow push from action in PAT trigger an action
+          persist-credentials: false
+      
       - name: Configure Git setting for CI
         run: |
           git config --global user.name "Lineng CAO"
@@ -22,13 +25,16 @@ jobs:
         with:
           node-version: 16
           registry-url: 'https://registry.npmjs.org'
+      
       - name: Test package
         run: |
           yarn install --frozen-lockfile
           yarn test
+      
       - name: Assign a new stable version from release tag version
         # no need git tag version change because it is created before this action starts
         run: npm version ${{ github.event.release.tag_name }} --no-git-tag-version
+      
       - name: Publish stable to NPMJS
         run: npm publish
         env:
@@ -40,6 +46,7 @@ jobs:
           node-version: 16
           registry-url: https://npm.pkg.github.com/
           scope: 'vincecao'
+      
       - name: Publish stable to GITHUB
         run: npm publish
         env:
@@ -61,16 +68,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      
       - name: Build useTools after tests
         run: |
           yarn install --frozen-lockfile
           yarn test
           yarn build
+      
       - name: Build example
         run: |
           cd example
           yarn install --frozen-lockfile
           yarn build
+      
       - name: Deploy to GitHub Pages
         if: success()
         uses: crazy-max/ghaction-github-pages@v2
