--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   test:
+    if: ${{ !contains(github.event.head_commit.message, 'ci-chore') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -14,3 +15,10 @@ jobs:
         run: |
           yarn install --frozen-lockfile
           yarn test
+
+  pass-ci-chore-commits:
+    if: ${{ contains(github.event.head_commit.message, 'ci-chore') }}
+    runs-on: ubuntu-latest
+    steps:
+      - run: 'echo pass'
+          
