add: branch setting for github-push-action@master

--- a/.github/workflows/publish-alpha.yml
+++ b/.github/workflows/publish-alpha.yml
@@ -53,3 +53,4 @@ jobs:
         with:
           # for re-triggering github checks on master, need to use a personal PAT token instead of GITHUB_TOKEN
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
