--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   test:
-    if: ${{ !contains(github.event.head_commit.message, 'ci-chore') }}
+    if: ${{ !contains(github.event.head_commit.message, 'chore(ci)') }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -17,7 +17,7 @@ jobs:
           yarn test
 
   pass-ci-chore-commits:
-    if: ${{ contains(github.event.head_commit.message, 'ci-chore') }}
+    if: ${{ contains(github.event.head_commit.message, 'chore(ci)') }}
     runs-on: ubuntu-latest
     steps:
       - run: 'echo pass'
