--- a/example/package.json
+++ b/example/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "example",
+  "name": "use-tools-example",
   "version": "1.0.2",
   "main": "index.tsx",
   "license": "MIT",
   "scripts": {
     "start": "parcel index.html",
-    "build": "parcel build index.html --public-url ./"
+    "build": "npm style && parcel build index.html --public-url ./",
+    "style": "npx tailwindcss -i ./src/input.css -o ./dist/output.css",
+    "style:watch": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
   },
   "dependencies": {
+    "@vincecao/use-tools": "..",
     "classnames": "^2.3.1",
     "react-app-polyfill": "^3.0.0",
     "react-syntax-highlighter": "^15.5.0"
@@ -21,6 +24,7 @@
     "@types/react": "../node_modules/@types/react",
     "@types/react-dom": "../node_modules/@types/react-dom",
     "parcel": "1.12.3",
+    "tailwindcss": "^3.1.8",
     "typescript": "../node_modules/typescript"
   }
 }
