--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "size": "size-limit",
     "analyze": "size-limit --why",
     "prettier": "prettier \"{.,src,src/**,example/src,example/src/**,types}/*.{js,jsx,ts,tsx,json}\"",
-    "format": "yarn prettier --write && yarn eslint . --fix"
+    "format": "npm run prettier --write && yarn eslint . --fix"
   },
   "peerDependencies": {
     "react": ">=16"
