--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,12 @@ jobs:
           yarn install --frozen-lockfile
           yarn test
 
+      - name: Build demo page test
+        run: |
+          cd example
+          yarn install --frozen-lockfile
+          yarn build
+
   pass-ci-chore-commits:
     if: ${{ contains(github.event.head_commit.message, 'chore(ci)') }}
     runs-on: ubuntu-latest
