--- a/example/package.json
+++ b/example/package.json
@@ -4,13 +4,18 @@
   "main": "index.tsx",
   "license": "MIT",
   "scripts": {
-    "start": "parcel index.html",
-    "build": "npm run style && parcel build index.html --public-url ./",
-    "style": "npx tailwindcss -i ./src/input.css -o ./dist/output.css",
-    "style:watch": "npx tailwindcss -i ./src/input.css -o ./dist/output.css --watch"
+    "prestart": "npm run tailwindcss",
+    "start": "run-p start:*",
+    "start:style": "npm run tailwindcss -- --watch",
+    "start:parcel": "parcel index.html",
+    "build": "run-s build:*",
+    "build:style": "npm run tailwindcss -- --prod",
+    "build:parcel": "parcel build index.html --public-url ./",
+    "tailwindcss": "npx tailwindcss -i ./src/input.css -o ./src/output.css"
   },
   "dependencies": {
     "classnames": "^2.3.1",
+    "npm-run-all": "^4.1.5",
     "react-app-polyfill": "^3.0.0",
     "react-syntax-highlighter": "^15.5.0"
   },
