--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
   },
   "dependencies": {
     "lodash.debounce": "^4.0.8",
-    "ohmyfetch": "^0.4.18"
+    "ohmyfetch": "^0.4.18",
+    "zustand": "^4.3.3"
   }
 }
